--- a/scores_eda.ipynb
+++ b/scores_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "4            NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores05 = scores[scores['schedule_season']>= 2005]"
+    "scores05 = pd.DataFrame(scores[scores['schedule_season']>= 2005])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "8677               6.0               63            NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -445,125 +445,284 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>schedule_date</th>\n",
        "      <th>schedule_season</th>\n",
+       "      <th>schedule_week</th>\n",
+       "      <th>schedule_playoff</th>\n",
+       "      <th>team_home</th>\n",
        "      <th>score_home</th>\n",
        "      <th>score_away</th>\n",
+       "      <th>team_away</th>\n",
+       "      <th>team_favorite_id</th>\n",
        "      <th>spread_favorite</th>\n",
+       "      <th>over_under_line</th>\n",
+       "      <th>stadium</th>\n",
+       "      <th>stadium_neutral</th>\n",
        "      <th>weather_temperature</th>\n",
        "      <th>weather_wind_mph</th>\n",
+       "      <th>weather_humidity</th>\n",
+       "      <th>weather_detail</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>4005.000000</td>\n",
-       "      <td>4005.000000</td>\n",
-       "      <td>4005.000000</td>\n",
-       "      <td>4005.000000</td>\n",
-       "      <td>3721.000000</td>\n",
-       "      <td>3721.000000</td>\n",
+       "      <th>12411</th>\n",
+       "      <td>2019-09-05</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Chicago Bears</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Green Bay Packers</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>Soldier Field</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2012.000000</td>\n",
-       "      <td>23.399750</td>\n",
-       "      <td>21.066417</td>\n",
-       "      <td>-5.445818</td>\n",
-       "      <td>61.411180</td>\n",
-       "      <td>5.685300</td>\n",
+       "      <th>12412</th>\n",
+       "      <td>2019-09-08</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Arizona Cardinals</td>\n",
+       "      <td>27</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Detroit Lions</td>\n",
+       "      <td>DET</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>45.5</td>\n",
+       "      <td>University of Phoenix Stadium</td>\n",
+       "      <td>False</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DOME</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>4.321033</td>\n",
-       "      <td>10.353504</td>\n",
-       "      <td>10.047419</td>\n",
-       "      <td>3.513149</td>\n",
-       "      <td>15.569933</td>\n",
-       "      <td>5.245031</td>\n",
+       "      <th>12413</th>\n",
+       "      <td>2019-09-08</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Carolina Panthers</td>\n",
+       "      <td>27</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Los Angeles Rams</td>\n",
+       "      <td>LAR</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>49.5</td>\n",
+       "      <td>Bank of America Stadium</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>2005.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>-26.500000</td>\n",
-       "      <td>-6.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>12414</th>\n",
+       "      <td>2019-09-08</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Cleveland Browns</td>\n",
+       "      <td>13</td>\n",
+       "      <td>43</td>\n",
+       "      <td>Tennessee Titans</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>-5.5</td>\n",
+       "      <td>44</td>\n",
+       "      <td>FirstEnergy Stadium</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2008.000000</td>\n",
-       "      <td>16.000000</td>\n",
-       "      <td>14.000000</td>\n",
-       "      <td>-7.000000</td>\n",
-       "      <td>51.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2012.000000</td>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>-4.500000</td>\n",
-       "      <td>67.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>2016.000000</td>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>27.000000</td>\n",
-       "      <td>-3.000000</td>\n",
-       "      <td>72.000000</td>\n",
-       "      <td>9.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>2019.000000</td>\n",
-       "      <td>62.000000</td>\n",
-       "      <td>59.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>97.000000</td>\n",
-       "      <td>40.000000</td>\n",
+       "      <th>12415</th>\n",
+       "      <td>2019-09-08</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Dallas Cowboys</td>\n",
+       "      <td>35</td>\n",
+       "      <td>17</td>\n",
+       "      <td>New York Giants</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>44</td>\n",
+       "      <td>AT&amp;T Stadium</td>\n",
+       "      <td>False</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DOME</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       schedule_season   score_home   score_away  spread_favorite  \\\n",
-       "count      4005.000000  4005.000000  4005.000000      4005.000000   \n",
-       "mean       2012.000000    23.399750    21.066417        -5.445818   \n",
-       "std           4.321033    10.353504    10.047419         3.513149   \n",
-       "min        2005.000000     0.000000     0.000000       -26.500000   \n",
-       "25%        2008.000000    16.000000    14.000000        -7.000000   \n",
-       "50%        2012.000000    23.000000    20.000000        -4.500000   \n",
-       "75%        2016.000000    30.000000    27.000000        -3.000000   \n",
-       "max        2019.000000    62.000000    59.000000         0.000000   \n",
+       "      schedule_date  schedule_season schedule_week  schedule_playoff  \\\n",
+       "12411    2019-09-05             2019             1             False   \n",
+       "12412    2019-09-08             2019             1             False   \n",
+       "12413    2019-09-08             2019             1             False   \n",
+       "12414    2019-09-08             2019             1             False   \n",
+       "12415    2019-09-08             2019             1             False   \n",
        "\n",
-       "       weather_temperature  weather_wind_mph  \n",
-       "count          3721.000000       3721.000000  \n",
-       "mean             61.411180          5.685300  \n",
-       "std              15.569933          5.245031  \n",
-       "min              -6.000000          0.000000  \n",
-       "25%              51.000000          0.000000  \n",
-       "50%              67.000000          5.000000  \n",
-       "75%              72.000000          9.000000  \n",
-       "max              97.000000         40.000000  "
+       "               team_home  score_home  score_away          team_away  \\\n",
+       "12411      Chicago Bears           3          10  Green Bay Packers   \n",
+       "12412  Arizona Cardinals          27          27      Detroit Lions   \n",
+       "12413  Carolina Panthers          27          30   Los Angeles Rams   \n",
+       "12414   Cleveland Browns          13          43   Tennessee Titans   \n",
+       "12415     Dallas Cowboys          35          17    New York Giants   \n",
+       "\n",
+       "      team_favorite_id  spread_favorite over_under_line  \\\n",
+       "12411              CHI             -3.0            46.5   \n",
+       "12412              DET             -3.0            45.5   \n",
+       "12413              LAR             -2.0            49.5   \n",
+       "12414              CLE             -5.5              44   \n",
+       "12415              DAL             -7.0              44   \n",
+       "\n",
+       "                             stadium  stadium_neutral  weather_temperature  \\\n",
+       "12411                  Soldier Field            False                  NaN   \n",
+       "12412  University of Phoenix Stadium            False                 72.0   \n",
+       "12413        Bank of America Stadium            False                  NaN   \n",
+       "12414            FirstEnergy Stadium            False                  NaN   \n",
+       "12415                   AT&T Stadium            False                 72.0   \n",
+       "\n",
+       "       weather_wind_mph weather_humidity weather_detail  \n",
+       "12411               NaN              NaN            NaN  \n",
+       "12412               0.0              NaN           DOME  \n",
+       "12413               NaN              NaN            NaN  \n",
+       "12414               NaN              NaN            NaN  \n",
+       "12415               0.0              NaN           DOME  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scores05.describe()"
+    "scores05[scores05['schedule_season'] == 2019].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores05['schedule_date'] = pd.to_datetime(scores05['schedule_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>schedule_date</th>\n",
+       "      <th>schedule_season</th>\n",
+       "      <th>schedule_week</th>\n",
+       "      <th>schedule_playoff</th>\n",
+       "      <th>team_home</th>\n",
+       "      <th>score_home</th>\n",
+       "      <th>score_away</th>\n",
+       "      <th>team_away</th>\n",
+       "      <th>team_favorite_id</th>\n",
+       "      <th>spread_favorite</th>\n",
+       "      <th>over_under_line</th>\n",
+       "      <th>stadium</th>\n",
+       "      <th>stadium_neutral</th>\n",
+       "      <th>weather_temperature</th>\n",
+       "      <th>weather_wind_mph</th>\n",
+       "      <th>weather_humidity</th>\n",
+       "      <th>weather_detail</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12677</th>\n",
+       "      <td>2020-02-02</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Superbowl</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Kansas City Chiefs</td>\n",
+       "      <td>31</td>\n",
+       "      <td>20</td>\n",
+       "      <td>San Francisco 49ers</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Hard Rock Stadium</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      schedule_date  schedule_season schedule_week  schedule_playoff  \\\n",
+       "12677    2020-02-02             2019     Superbowl              True   \n",
+       "\n",
+       "                team_home  score_home  score_away            team_away  \\\n",
+       "12677  Kansas City Chiefs          31          20  San Francisco 49ers   \n",
+       "\n",
+       "      team_favorite_id  spread_favorite over_under_line            stadium  \\\n",
+       "12677               KC             -1.5              53  Hard Rock Stadium   \n",
+       "\n",
+       "       stadium_neutral  weather_temperature  weather_wind_mph  \\\n",
+       "12677             True                  NaN               NaN   \n",
+       "\n",
+       "      weather_humidity weather_detail  \n",
+       "12677              NaN            NaN  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores05[scores05['schedule_date'] == '2020-02-02']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -573,26 +732,26 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 4005 entries, 8673 to 12677\n",
       "Data columns (total 17 columns):\n",
-      " #   Column               Non-Null Count  Dtype  \n",
-      "---  ------               --------------  -----  \n",
-      " 0   schedule_date        4005 non-null   object \n",
-      " 1   schedule_season      4005 non-null   int64  \n",
-      " 2   schedule_week        4005 non-null   object \n",
-      " 3   schedule_playoff     4005 non-null   bool   \n",
-      " 4   team_home            4005 non-null   object \n",
-      " 5   score_home           4005 non-null   int64  \n",
-      " 6   score_away           4005 non-null   int64  \n",
-      " 7   team_away            4005 non-null   object \n",
-      " 8   team_favorite_id     4005 non-null   object \n",
-      " 9   spread_favorite      4005 non-null   float64\n",
-      " 10  over_under_line      4005 non-null   object \n",
-      " 11  stadium              4005 non-null   object \n",
-      " 12  stadium_neutral      4005 non-null   bool   \n",
-      " 13  weather_temperature  3721 non-null   float64\n",
-      " 14  weather_wind_mph     3721 non-null   float64\n",
-      " 15  weather_humidity     1632 non-null   object \n",
-      " 16  weather_detail       1183 non-null   object \n",
-      "dtypes: bool(2), float64(3), int64(3), object(9)\n",
+      " #   Column               Non-Null Count  Dtype         \n",
+      "---  ------               --------------  -----         \n",
+      " 0   schedule_date        4005 non-null   datetime64[ns]\n",
+      " 1   schedule_season      4005 non-null   int64         \n",
+      " 2   schedule_week        4005 non-null   object        \n",
+      " 3   schedule_playoff     4005 non-null   bool          \n",
+      " 4   team_home            4005 non-null   object        \n",
+      " 5   score_home           4005 non-null   int64         \n",
+      " 6   score_away           4005 non-null   int64         \n",
+      " 7   team_away            4005 non-null   object        \n",
+      " 8   team_favorite_id     4005 non-null   object        \n",
+      " 9   spread_favorite      4005 non-null   float64       \n",
+      " 10  over_under_line      4005 non-null   object        \n",
+      " 11  stadium              4005 non-null   object        \n",
+      " 12  stadium_neutral      4005 non-null   bool          \n",
+      " 13  weather_temperature  3721 non-null   float64       \n",
+      " 14  weather_wind_mph     3721 non-null   float64       \n",
+      " 15  weather_humidity     1632 non-null   object        \n",
+      " 16  weather_detail       1183 non-null   object        \n",
+      "dtypes: bool(2), datetime64[ns](1), float64(3), int64(3), object(8)\n",
       "memory usage: 508.4+ KB\n"
      ]
     }
