mostly agg, map opposing yards, add opposing team

--- a/nfl_2016_main11.ipynb
+++ b/nfl_2016_main11.ipynb
@@ -163,6 +163,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 476,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 476,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nfl16['team_home'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 409,
    "metadata": {},
    "outputs": [
@@ -620,6 +640,27 @@
    "metadata": {},
    "source": [
     "### need to cut to week 6 here?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12',\n",
+       "       '13', '14', '15', '16', '17'], dtype=object)"
+      ]
+     },
+     "execution_count": 478,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nfl16_a['schedule_week'].unique()"
    ]
   },
   {
