lots to organize

--- a/nfl16_agg.ipynb
+++ b/nfl16_agg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4            258             83           1  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "502            210            127         1  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "501        227.8         96.2  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,57 +1051,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "car,\n",
-      "den,\n",
-      "ari,\n",
-      "atl,\n",
-      "bal,\n",
-      "buf,\n",
-      "chi,\n",
-      "cin,\n",
-      "cle,\n",
-      "dal,\n",
-      "det,\n",
-      "gb,\n",
-      "hou,\n",
-      "ind,\n",
-      "jax,\n",
-      "kc,\n",
-      "mia,\n",
-      "min,\n",
-      "ne,\n",
-      "no,\n",
-      "nyg,\n",
-      "nyj,\n",
-      "oak,\n",
-      "phi,\n",
-      "sdg,\n",
-      "sea,\n",
-      "tb,\n",
-      "ten,\n",
-      "lar,\n",
-      "pit,\n",
-      "sf,\n",
-      "was,\n"
+      "car = make_team_df('CAR')\n",
+      "den = make_team_df('DEN')\n",
+      "ari = make_team_df('ARI')\n",
+      "atl = make_team_df('ATL')\n",
+      "bal = make_team_df('BAL')\n",
+      "buf = make_team_df('BUF')\n",
+      "chi = make_team_df('CHI')\n",
+      "cin = make_team_df('CIN')\n",
+      "cle = make_team_df('CLE')\n",
+      "dal = make_team_df('DAL')\n",
+      "det = make_team_df('DET')\n",
+      "gb = make_team_df('GB')\n",
+      "hou = make_team_df('HOU')\n",
+      "ind = make_team_df('IND')\n",
+      "jax = make_team_df('JAX')\n",
+      "kc = make_team_df('KC')\n",
+      "mia = make_team_df('MIA')\n",
+      "min = make_team_df('MIN')\n",
+      "ne = make_team_df('NE')\n",
+      "no = make_team_df('NO')\n",
+      "nyg = make_team_df('NYG')\n",
+      "nyj = make_team_df('NYJ')\n",
+      "oak = make_team_df('OAK')\n",
+      "phi = make_team_df('PHI')\n",
+      "sdg = make_team_df('SDG')\n",
+      "sea = make_team_df('SEA')\n",
+      "tb = make_team_df('TB')\n",
+      "ten = make_team_df('TEN')\n",
+      "lar = make_team_df('LAR')\n",
+      "pit = make_team_df('PIT')\n",
+      "sf = make_team_df('SF')\n",
+      "was = make_team_df('WAS')\n"
      ]
     }
    ],
    "source": [
+    "team_func = []\n",
     "for team in teams:\n",
-    "    print (f\"{team.lower()},\")\n",
-    "    #print (f\"{team.lower()} = make_team_df('{team}')\")"
+    "    #print (f\"{team.lower()} = make_team_df'{(team.lower()}', mva\")\n",
+    "    print(f\"{team.lower()} = make_team_df('{team}')\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1141,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1245,7 @@
        "       'PIT', 'SF', 'WAS'], dtype=object)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1265,7 @@
        "(352, 18)"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
