please see bottom of readme for workflow order

--- a/nfl_model_setup.ipynb
+++ b/nfl_model_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "3583              WAS             -9.0             47.5           16         1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3584 entries, 0 to 3583\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   id                 3584 non-null   object \n",
+      " 1   schedule_date      3584 non-null   object \n",
+      " 2   schedule_season    3584 non-null   int64  \n",
+      " 3   schedule_week      3584 non-null   int64  \n",
+      " 4   target_team        3584 non-null   object \n",
+      " 5   score              3584 non-null   float64\n",
+      " 6   opponent_score     3584 non-null   float64\n",
+      " 7   opponent_team      3584 non-null   object \n",
+      " 8   win_margin         3584 non-null   float64\n",
+      " 9   passing_yards      3584 non-null   int64  \n",
+      " 10  rushing_yards      3584 non-null   int64  \n",
+      " 11  opp_passing_yards  3584 non-null   int64  \n",
+      " 12  opp_rushing_yards  3584 non-null   int64  \n",
+      " 13  home_team          3584 non-null   object \n",
+      " 14  team_favorite_id   3584 non-null   object \n",
+      " 15  spread_favorite    3584 non-null   float64\n",
+      " 16  over_under_line    3584 non-null   float64\n",
+      " 17  game_number        3584 non-null   int64  \n",
+      " 18  home_yes           3584 non-null   int64  \n",
+      "dtypes: float64(5), int64(8), object(6)\n",
+      "memory usage: 532.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "nfl_ma.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,10 +383,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 3360 entries, 253 to 3575\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   id                 3360 non-null   object \n",
+      " 1   schedule_date      3360 non-null   object \n",
+      " 2   schedule_season    3360 non-null   int64  \n",
+      " 3   schedule_week      3360 non-null   int64  \n",
+      " 4   target_team        3360 non-null   object \n",
+      " 5   score              3360 non-null   float64\n",
+      " 6   opponent_score     3360 non-null   float64\n",
+      " 7   opponent_team      3360 non-null   object \n",
+      " 8   win_margin         3360 non-null   float64\n",
+      " 9   passing_yards      3360 non-null   int64  \n",
+      " 10  rushing_yards      3360 non-null   int64  \n",
+      " 11  opp_passing_yards  3360 non-null   int64  \n",
+      " 12  opp_rushing_yards  3360 non-null   int64  \n",
+      " 13  home_team          3360 non-null   object \n",
+      " 14  team_favorite_id   3360 non-null   object \n",
+      " 15  spread_favorite    3360 non-null   float64\n",
+      " 16  over_under_line    3360 non-null   float64\n",
+      " 17  game_number        3360 non-null   int64  \n",
+      " 18  home_yes           3360 non-null   int64  \n",
+      " 19  pf_7mva            3360 non-null   float64\n",
+      " 20  pa_7mva            3360 non-null   float64\n",
+      " 21  margin_7mva        3360 non-null   float64\n",
+      " 22  pyards_7mva        3360 non-null   float64\n",
+      " 23  ryards_7mva        3360 non-null   float64\n",
+      " 24  opp_pyards_7mva    3360 non-null   float64\n",
+      " 25  opp_ryards_7mva    3360 non-null   float64\n",
+      "dtypes: float64(12), int64(8), object(6)\n",
+      "memory usage: 708.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "nfl7mva.info()"
+   ]
   },
   {
    "cell_type": "code",
