Notebook 5: main modeling, features and some eda

--- a/nfl_models1.ipynb
+++ b/nfl_models1.ipynb
@@ -650,6 +650,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### EDA Plot: Predicted scores underestimate towards mean as actual scores go higher. (blowout margin of victories are a consideration for future models)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {},
