Notebook 5a: re-ran Sequential only with BatchNormalization between layers

--- a/nfl_models_fin.ipynb
+++ b/nfl_models_fin.ipynb
@@ -1586,7 +1586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sequential"
+    "### Sequential - Rerun with BatchNormalization in between multiple layers"
    ]
   },
   {
@@ -1719,6 +1719,13 @@
    "outputs": [],
    "source": [
     "seq_preds = model_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- whoa! much better score with batch normalization"
    ]
   },
   {
